# dezhtech-remote

./: .gitignore  .gitmodules  Cargo.toml  vcpkg.json
.github/workflows/: bridge.yml  build-flutter-only.yml  build-windows.yml  flutter-build.yml  ui.yml
.github/workflows-disabled/: build-flutter-only.yml  main.yml  playground.yml  test-rust-build.yml
flutter/: pubspec.yaml
flutter/lib/: common.dart  consts.dart
flutter/lib/desktop/pages/: desktop_home_page.dart  desktop_tab_page.dart
flutter/windows/runner/: Runner.rc
libs/magnum-opus/: Cargo.toml
libs/magnum-opus/src/: lib.rs
libs/magnum-opus/sys/: Cargo.toml  build.rs  wrapper.h
libs/magnum-opus/sys/src/: lib.rs
src/: main.rs
