[package]
name = "dezhtech-remote"
version = "1.4.1"
authors = ["DezhTech <info@dezhtech.com>"]
edition = "2021"
build = "build.rs"
description = "DezhTech Remote - Fortress of Calm | Secure Remote Desktop Solution by DezhTech"
default-run = "dezhtech-remote"
repository = "https://github.com/pedram-jamshidian/dezhtech-remote"
readme = "README.md"
license = "AGPL-3.0"
keywords = ["remote-desktop", "remote-control", "dezhtech", "rdp", "vpn"]

[lib]
name = "librustdesk"
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "dezhtech-remote"
path = "src/main.rs"

[features]
default = ["use_dasp"]
hwcodec = ["scrap/hwcodec"]
mediacodec = ["scrap/mediacodec"]
linux_headless = ["pam"]
virtual_display_driver = ["virtual_display"]
plugin_framework = []
use_dasp = ["dasp"]
flutter_texture_render = []
cli = []
flutter = ["flutter_rust_bridge"]
vram = ["scrap/vram", "hwcodec"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
whoami = "1"
scrap = { path = "libs/scrap", features = ["wayland"] }
hbb_common = { path = "libs/hbb_common" }
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"
serde_repr = "0.1"
cfg-if = "1.0"
lazy_static = "1.4"
sha2 = "0.10"
repng = "0.2"
libc = "0.2"
parity-tokio-ipc = { git = "https://github.com/rustdesk-org/parity-tokio-ipc" }
flexi_logger = { version = "0.29", features = ["async"] }
runas = "1.2"
magnum-opus = { git = "https://github.com/rustdesk-org/magnum-opus" }
dasp = { version = "0.11", features = ["signal", "interpolate-linear", "interpolate"], optional = true }
rubato = "0.16"
samplerate = "0.2"
async-trait = "0.1"
uuid = { version = "1.6", features = ["v4"] }
clap = "4"
rpassword = "7"
base64 = "0.22"
num_cpus = "1"
bytes = { version = "1", features = ["serde"] }
default-net = "0.21"
wol-rs = "1"
flutter_rust_bridge = { version = "=2.7.1", optional = true, features = [
    "chrono",
    "uuid",
    "log",
] }
errno = "0.3"
rdev = { git = "https://github.com/rustdesk-org/rdev" }
url = { version = "2", features = ["serde"] }
crossbeam-queue = "0.3"
hex = "0.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "gzip"], default-features = false }
chrono = "0.4"
cidr-utils = "0.6"
libloading = "0.8"
fon = "0.6"
zip = "2.3"
shutdown_hooks = "0.1"
totp-rs = { version = "5.0", default-features = false }
pam = { git = "https://github.com/1wilkens/pam", optional = true }
dlopen2 = "0.7"
x11-clipboard = { git = "https://github.com/clslaid/x11-clipboard", branch = "feat/store-batch", optional = true }
x11rb = { version = "0.13", features = ["all-extensions"], optional = true }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
mac_address = "1.1"
machine-uid = "0.5"
dns-lookup = "2"
cpal = { git = "https://github.com/rustdesk-org/cpal", branch = "osx-screencapturekit" }
ringbuf = "0.4"
sysinfo = "0.32"
walkdir = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dev-dependencies]
clipboard = "0.5"

[target.'cfg(not(any(target_os = "android")))'.dependencies]
arboard = { version = "3", features = ["wayland-data-control"] }

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
psimple = { package = "libpulse-simple-binding", version = "2" }
psimple-sys = { package = "libpulse-simple-sys", version = "1.22" }

[target.'cfg(target_os = "linux")'.dependencies]
pam = { git = "https://github.com/1wilkens/pam", optional = true }
users = { version = "0.11" }
dbus = "0.9"
dbus-crossroads = "0.5"

[target.'cfg(target_os = "macos")'.dependencies]
dispatch = "0.2"
core-foundation = "0.10"
core-graphics = "0.24"
include_dir = "0.7"
dark-light = "1"
objc-foundation = "0.1"
objc_id = "0.1"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "wincrypt", "shellscalingapi", "pdh", "synchapi"] }
virtual_display = { path = "libs/virtual_display", optional = true }

[target.'cfg(target_arch = "x86_64")'.dependencies]

[workspace]
members = [
    "libs/scrap",
    "libs/hbb_common",
    "libs/enigo",
    "libs/clipboard",
    "libs/virtual_display",
    "libs/portable",
]
exclude = ["vdi/host", "examples/custom_plugin"]

[package.metadata.bundle]
name = "DezhTech Remote"
identifier = "com.dezhtech.remote"
icon = ["DezhTech_Dark_2048-logo-only-trans.png"]
deb_depends = [
    "libgtk-3-0",
    "libxcb-randr0",
    "libxdo3",
    "libxfixes3",
    "libxcb-shape0",
    "libxcb-xfixes0",
    "libasound2",
    "libsystemd0",
    "pipewire",
    "curl",
    "libva-drm2",
    "libva-x11-2",
    "libvdpau1",
    "libgstreamer-plugins-base1.0-0",
    "libpam0g",
    "libappindicator3-1",
]
osx_minimum_system_version = "10.14"
resources = ["mac-share/*"]

[package.metadata.winres]

[package.metadata.deb]
section = "net"

[package.metadata.appimage]
auto_link = true
auto_link_exclude_list = [
    "libc.so*",
    "libdl.so*",
    "libpthread.so*",
    "librt.so*",
    "libm.so*",
    "libgcc_s.so*",
    "libstdc++.so*",
    "libGL.so*",
    "libGLdispatch.so*",
    "libGLX.so*",
    "libEGL.so*",
    "libdrm.so*",
    "libX*",
    "libgdk_pixbuf*",
    "libwayland-*",
    "libnss*",
    "libnssutil*",
    "libsmime*",
    "libnspr*",
    "libplc*",
    "libplds*",
    "libpulse.so*",
    "libibus*",
    "libsystemd.so*",
    "libpipewire*",
    "libspa*",
    "libgcrypt*",
    "libgpg-error*",
    "liblzma*",
    "libzstd*",
    "libcap*",
    "liblz4*",
]

[profile.release]
lto = "thin"

[build-dependencies]
cc = "1.0"
hbb_common = { path = "libs/hbb_common" }

[dev-dependencies]
hound = "3"

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"
winapi = { version = "0.3", features = ["winnt"] }
